[package]
name = "program-a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4" }
tokio = { version = "1.19.2", features = ["macros", "fs", "rt-multi-thread"] }
futures = "0.3"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
