[package]
name = "program-a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4" }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-ip-address = "0.4"
itoap = "1"
ryu = "1"
once_cell = "1"
fxhash = "0.2"
sailfish = "0.4"

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
